修改主键序列化格式, 防止整形溢出丢失精度
